added userbackend controller, added githandler, fixed logging

--- a/Git-Watcher/Git-Watcher/appsettings.json
+++ b/Git-Watcher/Git-Watcher/appsettings.json
@@ -4,5 +4,20 @@
       "Default": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": { "pathFormat": "logs\\log-{Date}.txt" }
+      },
+      { "Name": "Console" }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Projektlogger2"
+    }
+  },
   "AllowedHosts": "*"
 }
