--- a/Git-Watcher/Git-Watcher_Client/Git-Watcher_Client.csproj
+++ b/Git-Watcher/Git-Watcher_Client/Git-Watcher_Client.csproj
@@ -63,10 +63,15 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventSelectionActivity.cs" />
+    <Compile Include="IssueActivity.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MyReposActivity.cs" />
+    <Compile Include="WatchingActivity.cs" />
+    <Compile Include="RepoSearchActivity.cs" />
+    <Compile Include="NotificationActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -136,12 +141,32 @@
     <AndroidResource Include="Resources\drawable\GitHubMark.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\SearchRepo.axml">
+    <AndroidResource Include="Resources\layout\reposearch.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\EventSelection.axml">
+    <AndroidResource Include="Resources\layout\event_selection.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\my_repos.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\watching_repos.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\issues.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\notifications.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
