--- a/Git-Watcher/Git-Watcher/appsettings.json
+++ b/Git-Watcher/Git-Watcher/appsettings.json
@@ -19,5 +19,8 @@
       "Application": "Projektlogger2"
     }
   },
+  "ConnectionStrings": {
+    "gitwatcher": "Server=localhost\\sqlexpress;Database=gitwatcher;Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
