Xamarin- RepoSearch Activity shows now simple String Search Items; EventSelection Activity has now Id

--- a/Git-Watcher/Git-Watcher/Git-Watcher.csproj
+++ b/Git-Watcher/Git-Watcher/Git-Watcher.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GitWatcher.ApiModels\GitWatcher.ApiModels.csproj" />
+    <ProjectReference Include="..\GitWatcher.GitHubService\GitWatcher.GitHubService.csproj" />
   </ItemGroup>
 
 </Project>
